Add navbar and carousel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-
-
+<app-navbar></app-navbar>
+<app-carousel></app-carousel>
 <div class="jumbotron">
 
   <h1>Dead Jokes - Chill out, mate!</h1>
