add routes and making project  structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-navbar></app-navbar>
-<div class="container">
-  <div class="row">
+<div class="container my-3">
+  <div class="row my-3">
     <div class="col-10 offset-1">
       <app-carousel></app-carousel>
     </div>
   </div>
-</div>
-
-<div class="jumbotron">
-
-  <h1>Dead Jokes - Chill out, mate!</h1>
-  <h3>Tell me a joke.</h3>
-</div>
 
 <app-dashboard></app-dashboard>
+
+</div>
+
+<app-footer></app-footer>
