--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -9,15 +9,10 @@
  
   <!-- 轮播图片 -->
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://static.runoob.com/images/mix/img_fjords_wide.jpg">
+    <div class="carousel-item" [class.active]="src === imageSrc[0]" *ngFor="let src of imageSrc">
+      <img src={{src}}>
     </div>
-    <div class="carousel-item">
-      <img src="https://static.runoob.com/images/mix/img_nature_wide.jpg">
-    </div>
-    <div class="carousel-item">
-      <img src="https://static.runoob.com/images/mix/img_mountains_wide.jpg">
-    </div>
+    
   </div>
  
   <!-- 左右切换按钮 -->
