--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,6 +25,11 @@
         </li>
       </ul>
     </div>
+
+    <ul class="navbar-nav ml-md-auto nav-right">
+      <li class="nav-item">Login</li>
+      <li class="nav-item">About</li>
+    </ul>
   </div>
 
 </nav>
