#1 add basic login form but no styles

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -27,7 +27,7 @@
     </div>
 
     <ul class="navbar-nav ml-md-auto nav-right">
-      <li class="nav-item">Login</li>
+      <li class="nav-item"><a href="login">Login</a></li>
       <li class="nav-item">About</li>
     </ul>
   </div>
