--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-navbar></app-navbar>
 <div class="container my-3">
-  <div class="row my-3">
-    <div class="col-10 offset-1">
-      <app-carousel></app-carousel>
-    </div>
-  </div>
 
-<app-dashboard></app-dashboard>
+
+<!-- <app-dashboard></app-dashboard> -->
 <router-outlet></router-outlet>
 </div>
 
