--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,19 @@
 
 
-<div class="test-scss">
-  <p>This is footer</p>
-</div>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-12">
+        <span class="copyright">Copyright &copy; Dead Joke 2019</span>
+      </div>
+      <div class="col-md-4 col-12">
+
+      </div>
+      <div class="col-md-4 col-12">
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
