#5 Trying to use big bg for main tone

--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -1,3 +1,10 @@
-<p>
-  home works!
-</p>
+<div class="" id="masthead">
+    <div class="container">
+        <div class="intro-text">
+          <div class="intro-lead-in">Welcome To My Studio!</div>
+          <div class="intro-heading text-uppercase">
+            How are you today
+          </div>
+        </div>
+      </div>
+</div>
