--- a/src/app/routes/home/home.component.scss
+++ b/src/app/routes/home/home.component.scss
@@ -25,3 +25,37 @@
         margin-bottom: 2rem;
     }
 }
+
+.section-full-height {
+    height: 100vh;
+}
+
+.page-section {
+    padding: 5rem 0;
+}
+
+.section-subheading {
+    font-style: italic;
+    margin-bottom: 2rem;
+}
+
+.image-fluid {
+    max-width: 100%;
+    height: auto;
+}
+
+.gallery-item {
+    .gallery-item-hover {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transition: all ease .5s;
+        opacity: 0;
+        background: rgba(254,209,54,.9);
+        
+    }
+    .gallery-item-hover:hover {
+        opacity: 1;
+    }
+}
+
