Add fontawesome and stuff

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,7 +5,8 @@
     <!-- Brand/logo -->
     <a class="navbar-brand" href="/">
       <img src="../../assets/images/fmn08311_logo_small.jpg" alt="" height="50">
-      Frinday Movie Night
+      <span class="brand-title">Frinday Movie Night</span>
+      
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
