--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,16 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" [class.navbar-shrink]='navShrink'>
-    <div class="container">
+  <div class="container">
 
 
     <!-- Brand/logo -->
     <a class="navbar-brand" href="/">
       <img src="../../assets/images/fmn08311_logo_small.jpg" alt="" height="50">
       <span class="brand-title">Frinday Movie Night</span>
-      
+
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
       <!-- Links -->
