Configuration: Using global css

--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -5,6 +5,7 @@
       <div class="intro-heading text-uppercase">
         How are you today
       </div>
+      <a class="btn btn-primary btn-xl " href="#">看更多</a>
     </div>
   </div>
 </div>
@@ -67,7 +68,7 @@
 <!-- Bad Jokes section -->
 
 <!-- My gallery -->
-<section class="page-section " id="myGallery">
+<section class="page-section .section-full-height " id="myGallery">
   <div class="container">
       <div class="row">
         <div class="col-12 text-center">
