--- a/src/app/routes/home/home.component.scss
+++ b/src/app/routes/home/home.component.scss
@@ -25,10 +25,14 @@
     font-family: Montserrat, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     margin-bottom: 2rem;
   }
+  .btn-xl {
+    font-size: 1.25rem;
+    padding: 20px 40px;
+  }
 }
 
 .section-full-height {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .page-section {
