Learn how to use  instead of , just remember import RouterModule

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 
 
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" routerLink="/">
       <img src="../../assets/images/fmn08311_logo_small.jpg" alt="" height="50">
       <span class="brand-title">Frinday Movie Night</span>
 
@@ -29,8 +29,7 @@
     </div>
 
     <ul class="navbar-nav ml-md-auto nav-right">
-      <li class="nav-item"><a href="login">Login</a></li>
-      <li class="nav-item">About</li>
+      <li class="nav-item" routerLinkActive="active"><a class="btn btn-primary login-btn" routerLink="login">登录</a></li>
     </ul>
   </div>
 
