--- a/src/app/routes/login/login.component.html
+++ b/src/app/routes/login/login.component.html
@@ -1,23 +1,28 @@
-<div class="sign-in row">
-  <div class="col-md-6 offset-md-3 col-12">
-    <h3>Login to Dead Jokes</h3>
+<section class="section-full-height page-section">
+  <div class="container">
+    <div class="sign-in row">
+      <div class="col-md-6 offset-md-3 col-12">
+        <h3>Login to Dead Jokes</h3>
 
-    <div class="form-section">
-      <form>
-        <div class="form-group">
-          <label for="uid">ID:</label>
-          <input type="text" id="uid" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="pwd">Passcode</label>
-          <input type="password" name="" id="pwd" class="form-control">
-        </div>
+        <div class="form-section">
+          <form>
+            <div class="form-group">
+              <label for="uid">ID:</label>
+              <input type="text" id="uid" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="pwd">Passcode</label>
+              <input type="password" name="" id="pwd" class="form-control">
+            </div>
 
-        <div class="form-group">
-          <button class="btn btn-primary">Submit</button>
-        </div>
+            <div class="form-group">
+              <button class="btn btn-primary">Submit</button>
+            </div>
 
-      </form>
+          </form>
+        </div>
+      </div>
     </div>
+
   </div>
-</div>
+</section>
