--- a/src/app/scss/global/_button.scss
+++ b/src/app/scss/global/_button.scss
@@ -11,4 +11,9 @@
             background-color: $primaryButtonColor;
         }
     }
+
+    &.btn-primary-gradient {
+        color: white;
+        background: $gradientOrange;
+    }
 }
