--- a/src/app/routes/login/login.component.scss
+++ b/src/app/routes/login/login.component.scss
@@ -1,7 +1,68 @@
+@import '../../scss/global/variables';
 .section-full-height {
   min-height: 100vh;
 }
 
 .page-section {
   padding: 5rem 0;
+}
+
+.btn-login {
+    height: 3rem;
+    padding: 0 3rem;
+    border-radius: 1.5rem;
+}
+
+#loginSection {
+    background: $silver;
+}
+
+.login-wrapper {
+    width: 500px;
+    margin: 0 auto;
+    .login-header {
+        text-align: center;
+    }
+
+    .login-form-wrapper {
+        padding: 10px 0;
+        background-color: white;
+        border-radius: 10px;
+
+        .input-wrapper {
+            position: relative;
+            width: 100%;
+            border-bottom: 1px solid gray;
+            padding: 2rem 0;
+            
+            .login-input {
+                background: transparent;
+                padding-left: 60px;
+                display: block;
+                width: 100%;
+                height: 50px;
+                transition: all 0.4s;
+                &:focus {
+                    border-color: transparent;
+                }
+            }
+            .focus-input {
+                position: absolute;
+                display: block;
+                top: 0;
+                left: 0;
+                padding: 2.5rem .5rem;
+            }
+            input {
+                border: none;
+                outline: none;
+            }
+        }
+
+        .login-button-wrapper {
+            margin-top: 2rem;
+            display: flex;
+            justify-content: center;
+        }
+    }
 }
