--- a/src/app/scss/global/_variables.scss
+++ b/src/app/scss/global/_variables.scss
@@ -8,6 +8,9 @@ $orange: #fec810;
 $teal: #008080;
 $silver: #C0C0C0;
 $gray: #808080;
+$tangerine: #eb8c00;
+
+$gradientOrange:linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
 
 $primaryButtonColor: $yellow;
 $primaryButtonHoverColor: $orange;
