--- a/src/app/routes/login/login.component.scss
+++ b/src/app/routes/login/login.component.scss
@@ -37,13 +37,14 @@
             
             .login-input {
                 background: transparent;
-                padding-left: 60px;
+                padding: 0 10px 0 7rem;
                 display: block;
                 width: 100%;
                 height: 50px;
                 transition: all 0.4s;
                 &:focus {
                     border-color: transparent;
+                    padding-left: 8rem;
                 }
             }
             .focus-input {
@@ -51,7 +52,7 @@
                 display: block;
                 top: 0;
                 left: 0;
-                padding: 2.5rem .5rem;
+                padding: 2.5rem 2.5rem;
             }
             input {
                 border: none;
